objects/ESC_Case_Recommended_Forms__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ESC_Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Origin__c</fullName>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Subject__c</fullName>
        <label>Subject</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Case Recommended Forms</label>
</CustomObject>